package org.bimserver.pb;

/******************************************************************************
 * Copyright (C) 2009-2013  BIMserver.org
 * 
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 * 
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *****************************************************************************/
import "ServiceInterface.proto";
option java_generic_services = true;

option java_outer_classname = "AdminInterfaceImpl";

option optimize_for = SPEED;

service AdminInterface {
	rpc clearOutputFileCache (ClearOutputFileCacheRequest) returns (ClearOutputFileCacheResponse);

	rpc disablePlugin (DisablePluginRequest) returns (VoidResponse);

	rpc enablePlugin (EnablePluginRequest) returns (VoidResponse);

	rpc getAllPlugins (GetAllPluginsRequest) returns (GetAllPluginsResponse);

	rpc getBimServerInfo (GetBimServerInfoRequest) returns (GetBimServerInfoResponse);

	rpc getDatabaseInformation (GetDatabaseInformationRequest) returns (GetDatabaseInformationResponse);

	rpc getJavaInfo (GetJavaInfoRequest) returns (GetJavaInfoResponse);

	rpc getLastDatabaseReset (GetLastDatabaseResetRequest) returns (GetLastDatabaseResetResponse);

	rpc getLatestVersion (GetLatestVersionRequest) returns (GetLatestVersionResponse);

	rpc getLogs (GetLogsRequest) returns (GetLogsResponse);

	rpc getMigrations (GetMigrationsRequest) returns (GetMigrationsResponse);

	rpc getProtocolBuffersFile (GetProtocolBuffersFileRequest) returns (GetProtocolBuffersFileResponse);

	rpc getServerInfo (GetServerInfoRequest) returns (GetServerInfoResponse);

	rpc getServerLog (GetServerLogRequest) returns (GetServerLogResponse);

	rpc getServerStartTime (GetServerStartTimeRequest) returns (GetServerStartTimeResponse);

	rpc getSystemInfo (GetSystemInfoRequest) returns (GetSystemInfoResponse);

	rpc getVersion (GetVersionRequest) returns (GetVersionResponse);

	rpc migrateDatabase (MigrateDatabaseRequest) returns (VoidResponse);

	rpc setup (SetupRequest) returns (VoidResponse);

	rpc upgradePossible (UpgradePossibleRequest) returns (UpgradePossibleResponse);

}

message ClearOutputFileCacheRequest {
}

message ClearOutputFileCacheResponse {
	optional string errorMessage = 1;
	optional int32 value = 2;
}

message DisablePluginRequest {
	optional string name = 1;
}

message EnablePluginRequest {
	optional string name = 1;
}

message GetAllPluginsRequest {
}

message SSerializerPluginDescriptor {
	optional int32 rid = 1;
	optional int64 oid = 2;
}

message SModelComparePluginDescriptor {
	optional int32 rid = 1;
	optional int64 oid = 2;
}

message SRenderEnginePluginDescriptor {
	optional int32 rid = 1;
	optional int64 oid = 2;
}

message SServicePluginDescriptor {
	optional int32 rid = 1;
	optional int64 oid = 2;
}

message SDeserializerPluginDescriptor {
	optional int32 rid = 1;
	optional int64 oid = 2;
}

message SQueryEnginePluginDescriptor {
	optional int32 rid = 1;
	optional int64 oid = 2;
}

message SModelMergerPluginDescriptor {
	optional int32 rid = 1;
	optional int64 oid = 2;
}

message SWebModulePluginDescriptor {
	optional int32 rid = 1;
	optional int64 oid = 2;
}

message SPluginDescriptor {
	required string __actual_type = 1;
	optional SSerializerPluginDescriptor __SSerializerPluginDescriptor = 2;
	optional SModelComparePluginDescriptor __SModelComparePluginDescriptor = 3;
	optional SRenderEnginePluginDescriptor __SRenderEnginePluginDescriptor = 4;
	optional SServicePluginDescriptor __SServicePluginDescriptor = 5;
	optional SDeserializerPluginDescriptor __SDeserializerPluginDescriptor = 6;
	optional SQueryEnginePluginDescriptor __SQueryEnginePluginDescriptor = 7;
	optional SModelMergerPluginDescriptor __SModelMergerPluginDescriptor = 8;
	optional SWebModulePluginDescriptor __SWebModulePluginDescriptor = 9;
	optional string defaultName = 10;
	optional bool enabled = 11;
	optional string simpleName = 12;
	optional string pluginInterfaceClassName = 13;
	optional int32 rid = 14;
	optional string location = 15;
	optional int64 oid = 16;
	optional string description = 17;
	repeated int64 configurations = 18;
	optional string pluginClassName = 19;
}

message GetAllPluginsResponse {
	optional string errorMessage = 1;
	repeated SPluginDescriptor value = 2;
}

message GetBimServerInfoRequest {
}

message SBimServerInfo {
	optional int32 users = 1;
	optional int64 latestDate = 2;
	optional string latestVersion = 3;
	optional int32 projects = 4;
	optional string serverLogUrl = 5;
	optional int32 rid = 6;
	optional int64 currentDate = 7;
	optional int64 oid = 8;
	optional string currentVersion = 9;
	optional int64 started = 10;
	optional int32 revisions = 11;
	optional int32 schemaVersion = 12;
	optional int32 checkouts = 13;
}

message GetBimServerInfoResponse {
	optional string errorMessage = 1;
	optional SBimServerInfo value = 2;
}

message GetDatabaseInformationRequest {
}

message SDatabaseInformationItem {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional string value = 3;
	optional string key = 4;
}

message SDatabaseInformationCategory {
	optional string title = 1;
	repeated SDatabaseInformationItem items = 2;
	optional int32 rid = 3;
	optional int64 oid = 4;
}

message SDatabaseInformation {
	optional int64 created = 1;
	optional int32 numberOfProjects = 2;
	optional int32 rid = 3;
	optional string location = 4;
	optional int64 oid = 5;
	repeated SDatabaseInformationCategory categories = 6;
	optional int32 numberOfUsers = 7;
	optional int64 databaseSizeInBytes = 8;
	optional string type = 9;
	optional int32 schemaVersion = 10;
	optional int32 numberOfCheckouts = 11;
	optional int32 numberOfRevisions = 12;
}

message GetDatabaseInformationResponse {
	optional string errorMessage = 1;
	optional SDatabaseInformation value = 2;
}

message GetJavaInfoRequest {
}

message SJavaInfo {
	optional string javaFileSeparator = 1;
	optional string javaVendor = 2;
	optional string javavmVersion = 3;
	optional string javaIoTmp = 4;
	optional string javaspecVendor = 5;
	optional int32 threads = 6;
	optional string javaVendorurl = 7;
	optional int64 oid = 8;
	optional string javaExtdir = 9;
	optional string javaVersion = 10;
	optional string javavmVendor = 11;
	optional int64 heapTotal = 12;
	repeated string javaLibrarypath = 13;
	optional string javaspecVersion = 14;
	optional string javaClassVersion = 15;
	optional int64 heapFree = 16;
	optional string javaHome = 17;
	optional string javaPathSeparator = 18;
	optional string javaLineSeparator = 19;
	optional int32 rid = 20;
	repeated string javaClasspath = 21;
	optional int64 heapUsed = 22;
	optional string javaspecName = 23;
	optional string javavmName = 24;
	optional int64 heapMax = 25;
}

message GetJavaInfoResponse {
	optional string errorMessage = 1;
	optional SJavaInfo value = 2;
}

message GetLastDatabaseResetRequest {
}

message GetLastDatabaseResetResponse {
	optional string errorMessage = 1;
	optional int64 value = 2;
}

message GetLatestVersionRequest {
}

message SVersion {
	optional string supportEmail = 1;
	optional int32 revision = 2;
	optional int32 minor = 3;
	optional int32 rid = 4;
	optional int64 oid = 5;
	optional string supportUrl = 6;
	optional string downloadUrl = 7;
	optional int64 date = 8;
	optional int32 major = 9;
}

message GetLatestVersionResponse {
	optional string errorMessage = 1;
	optional SVersion value = 2;
}

message GetLogsRequest {
}

message SNewObjectIDMUploaded {
	optional int32 rid = 1;
	optional int64 oid = 2;
}

message SServerStarted {
	optional int32 rid = 1;
	optional int64 oid = 2;
}

message SRevisionBranched {
	optional int64 newrevisionId = 1;
	optional int32 rid = 2;
	optional int64 oid = 3;
	optional int64 oldrevisionId = 4;
}

message SUserChanged {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional int64 userId = 3;
}

message SExtendedDataAddedToProject {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional int64 projectId = 3;
	optional int64 extendedDataId = 4;
}

message SUserAddedToProject {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional int64 userId = 3;
	optional int64 projectId = 4;
}

message SPasswordReset {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional int64 userId = 3;
}

message SExtendedDataAddedToRevision {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional int64 extendedDataId = 3;
	optional int64 revisionId = 4;
}

message SNewRevisionAdded {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional int64 projectId = 3;
	optional int64 revisionId = 4;
}

message SRevisionUpdated {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional int64 revisionId = 3;
}

message SNewProjectAdded {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional int64 projectId = 3;
	optional int64 parentProjectId = 4;
}

message SNewCheckoutAdded {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional int64 checkoutId = 3;
}

message SDatabaseCreated {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional string path = 3;
	optional int32 version = 4;
}

message SProjectDeleted {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional int64 projectId = 3;
}

enum SNotifictionResultEnum{
	SNotifictionResultEnum_NR_ERROR = 0;
	SNotifictionResultEnum_SUCCESS = 1;
	SNotifictionResultEnum_PROGRESS_UNKNOWN = 2;
	SNotifictionResultEnum_PROGRESS_PERCENTAGE = 3;
}

message SRemoteServiceCalled {
	repeated string infos = 1;
	repeated string errors = 2;
	optional int64 serviceId = 3;
	optional int32 percentage = 4;
	optional int32 rid = 5;
	optional int64 oid = 6;
	optional SNotifictionResultEnum state = 7;
	repeated string warnings = 8;
}

message SDownload {
	optional int32 rid = 1;
	optional int64 oid = 2;
}

message SPasswordChanged {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional int64 userId = 3;
}

message SUserUndeleted {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional int64 userId = 3;
}

message SNewUserAdded {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional int64 userId = 3;
}

message SUserRemovedFromProject {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional int64 userId = 3;
	optional int64 projectId = 4;
}

message SProjectUndeleted {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional int64 projectId = 3;
}

message SGeoTagUpdated {
	optional int32 rid = 1;
	optional int64 geoTagId = 2;
	optional int64 oid = 3;
}

message SSettingsSaved {
	optional int32 rid = 1;
	optional int64 oid = 2;
}

message SProjectUpdated {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional int64 projectId = 3;
}

message SUserDeleted {
	optional int32 rid = 1;
	optional int64 oid = 2;
	optional int64 userId = 3;
}

message SLogAction {
	required string __actual_type = 1;
	optional SNewObjectIDMUploaded __SNewObjectIDMUploaded = 2;
	optional SServerStarted __SServerStarted = 3;
	optional SRevisionBranched __SRevisionBranched = 4;
	optional SUserChanged __SUserChanged = 5;
	optional SExtendedDataAddedToProject __SExtendedDataAddedToProject = 6;
	optional SUserAddedToProject __SUserAddedToProject = 7;
	optional SPasswordReset __SPasswordReset = 8;
	optional SExtendedDataAddedToRevision __SExtendedDataAddedToRevision = 9;
	optional SNewRevisionAdded __SNewRevisionAdded = 10;
	optional SRevisionUpdated __SRevisionUpdated = 11;
	optional SNewProjectAdded __SNewProjectAdded = 12;
	optional SNewCheckoutAdded __SNewCheckoutAdded = 13;
	optional SDatabaseCreated __SDatabaseCreated = 14;
	optional SProjectDeleted __SProjectDeleted = 15;
	optional SRemoteServiceCalled __SRemoteServiceCalled = 16;
	optional SDownload __SDownload = 17;
	optional SPasswordChanged __SPasswordChanged = 18;
	optional SUserUndeleted __SUserUndeleted = 19;
	optional SNewUserAdded __SNewUserAdded = 20;
	optional SUserRemovedFromProject __SUserRemovedFromProject = 21;
	optional SProjectUndeleted __SProjectUndeleted = 22;
	optional SGeoTagUpdated __SGeoTagUpdated = 23;
	optional SSettingsSaved __SSettingsSaved = 24;
	optional SProjectUpdated __SProjectUpdated = 25;
	optional SUserDeleted __SUserDeleted = 26;
	optional int64 executorId = 27;
	optional int32 rid = 28;
	optional int64 oid = 29;
	optional SAccessMethod accessMethod = 30;
	optional int64 date = 31;
}

message GetLogsResponse {
	optional string errorMessage = 1;
	repeated SLogAction value = 2;
}

message GetMigrationsRequest {
}

message SMigration {
	optional bool executed = 1;
	optional int32 rid = 2;
	optional int64 oid = 3;
	optional string description = 4;
	optional int32 number = 5;
}

message GetMigrationsResponse {
	optional string errorMessage = 1;
	repeated SMigration value = 2;
}

message GetProtocolBuffersFileRequest {
	optional string interfaceName = 1;
}

message GetProtocolBuffersFileResponse {
	optional string errorMessage = 1;
	optional string value = 2;
}

message GetServerInfoRequest {
}

enum SServerState{
	SServerState_UNDEFINED = 0;
	SServerState_NOT_SETUP = 1;
	SServerState_MIGRATION_REQUIRED = 2;
	SServerState_MIGRATION_IMPOSSIBLE = 3;
	SServerState_FATAL_ERROR = 4;
	SServerState_RUNNING = 5;
}

message SServerInfo {
	optional string errorMessage = 1;
	optional int32 rid = 2;
	optional int64 oid = 3;
	optional SServerState serverState = 4;
}

message GetServerInfoResponse {
	optional string errorMessage = 1;
	optional SServerInfo value = 2;
}

message GetServerLogRequest {
}

message GetServerLogResponse {
	optional string errorMessage = 1;
	optional string value = 2;
}

message GetServerStartTimeRequest {
}

message GetServerStartTimeResponse {
	optional string errorMessage = 1;
	optional int64 value = 2;
}

message GetSystemInfoRequest {
}

message SSystemInfo {
	optional string userDir = 1;
	optional string osname = 2;
	optional string userHome = 3;
	optional int32 rid = 4;
	optional int64 oid = 5;
	optional string userName = 6;
	optional int64 datetime = 7;
	optional string osversion = 8;
	optional int32 cpucores = 9;
}

message GetSystemInfoResponse {
	optional string errorMessage = 1;
	optional SSystemInfo value = 2;
}

message GetVersionRequest {
}

message GetVersionResponse {
	optional string errorMessage = 1;
	optional SVersion value = 2;
}

message MigrateDatabaseRequest {
}

message SetupRequest {
	optional string siteAddress = 1;
	optional string smtpServer = 2;
	optional string smtpSender = 3;
	optional string adminName = 4;
	optional string adminUsername = 5;
	optional string adminPassword = 6;
}

message UpgradePossibleRequest {
}

message UpgradePossibleResponse {
	optional string errorMessage = 1;
	optional bool value = 2;
}

